product_docs/docs/warehousepg/7.4/ref_guide/modules/extensions/index.mdx
---
title: Extensions
description: Extensions for WarehousePG that require a separate download and install.
displayBanner: ''
navigation:
  - diskquota
  - pgaa
  - pgaudit
  - pgfs
  - pgvector
  - postgresql-hll
  - user_profile
  - whpg-anonymizer
  - whpg_cron
  - whpg_fdw
  - whpg-partman
  - whpg-pgsphere
  - whpg-q3c
  - whpg_utl_raw
indexCards: extra
redirects:
  - ../edb_modules
---

These extensions require a separate package install on each host in your WarehousePG cluster before you can enable them.

-   [diskquota](diskquota.mdx) - Allows WarehousePG administrators to limit the amount of disk space used by schemas, roles, or tablespaces in a database.
-   [MADlib](../../../admin_guide/analytics/madlib.mdx) - Provides machine learning routines for structured and unstructured data.
-   [PGAA](pgaa.mdx) - Enables distributed analytical queries against object storage directly from WarehousePG, with support for Parquet, Delta Lake, and Iceberg formats.
-   [pgAudit](pgaudit.mdx) - Provides detailed session and object audit logging for WarehousePG.
-   [PGFS](pgfs.mdx) - Provides the storage layer for object storage connectivity, including credential management for S3, GCS, and Azure. Required dependency of PGAA.
-   [pgvector](pgvector.mdx) - Provides vector similarity search capabilities for WarehousePG that enable searching, storing, and querying machine language-generated embeddings at large scale.
-   [PostGIS](../../../admin_guide/analytics/postGIS.mdx) - Provides spatial and geographic data types and functions for WarehousePG.
-   [postgresql-hll](postgresql-hll.mdx) - Provides native HyperLogLog data types and relation functions, operators, and aggregates.
-   [user_profile](user_profile.mdx) - Provides password quality checking and policy definition for WarehousePG.
-   [whpg-anonymizer](whpg-anonymizer.mdx) - Provides dynamic data masking and static data anonymization for WarehousePG.
-   [whpg_cron](whpg_cron.mdx) - Provides a cron-based job scheduler for running periodic SQL commands directly from WarehousePG.
-   [whpg_fdw](whpg_fdw.mdx) - Provides a foreign data wrapper (FDW) for accessing data stored in a remote WarehousePG cluster.
-   [whpg-partman](whpg-partman.mdx) - Automates the creation, maintenance, and retention of time-based and serial ID-based partition sets.
-   [whpg-pgsphere](whpg-pgsphere.mdx) - Provides spherical data types and operators for astronomical data.
-   [whpg-q3c](whpg-q3c.mdx) - Provides spherical indexing for astronomical catalogues.
-   [whpg-utl-raw](whpg_utl_raw.mdx) - Provides Oracle-compatible `UTL_RAW` functions for manipulating the `RAW` binary data type.

## Downloading and installing an extension

You must install the EDB extension on each host in your WarehousePG cluster.

1. From the coordinator, download the package from the EDB repository:

    <TabContainer syncKey="download">
    <Tab title="RHEL 8, 9">

    ```bash
    export EDB_SUBSCRIPTION_TOKEN=<your-token>
    export EDB_REPO=gpsupp
    curl -1sSLf "https://downloads.enterprisedb.com/$EDB_SUBSCRIPTION_TOKEN/$EDB_REPO/setup.rpm.sh" | sudo -E bash
    sudo dnf download edb-whpg<major_version>-<extension_name>
    ```
    
    </Tab>
    <Tab title="RHEL 7">

    ```bash
    export EDB_SUBSCRIPTION_TOKEN=<your-token>
    export EDB_REPO=gpsupp
    curl -1sSLf "https://downloads.enterprisedb.com/$EDB_SUBSCRIPTION_TOKEN/$EDB_REPO/setup.rpm.sh" | sudo -E bash
    sudo yumdownloader edb-whpg<major_version>-<extension_name>
    ```

    </Tab>
    </TabContainer>

    Where:
    - `<your-token>` is the token you received when you registered for the EDB subscription.
    - `<major_version>` is your WHPG version (6 or 7).
    - `<extension_name>` is the name of the extension you want to install.

1. Create a file `all_hosts` on your WHPG coordinator, which lists all hosts in the WHPG cluster. For example:

    ```ini
    cdw
    scdw
    sdw1
    sdw2
    sdw3
    ```

1. From the coordinator, use the `gpsync` utility to transfer the package to all hosts in the cluster and then use the `gpssh` utility to install the package:

    <TabContainer syncKey="install">
    <Tab title="RHEL 8, 9">

    ```bash 
    gpsync -f all_hosts <package-name> =:/tmp
    gpssh -f all_hosts -e 'sudo dnf install -y /tmp/<package-name>'
    ```
    
    </Tab>
    <Tab title="RHEL 7">

    ```bash 
    gpsync -f all_hosts <package-name> =:/tmp
    gpssh -f all_hosts -e 'sudo yum install -y /tmp/<package-name>'
    ```

    </Tab>
    </TabContainer>

  Where `<package-name>` is the name of the package file you downloaded.
